dnl =======================================================
dnl FILE: ./admin/configure.in.min
dnl =======================================================

dnl    This file is part of the KDE libraries/packages
dnl    Copyright (C) 2001 Stephan Kulow (coolo@kde.org)
 
dnl    This file is free software; you can redistribute it and/or
dnl    modify it under the terms of the GNU Library General Public
dnl    License as published by the Free Software Foundation; either
dnl    version 2 of the License, or (at your option) any later version.
 
dnl    This library is distributed in the hope that it will be useful,
dnl    but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl    Library General Public License for more details.
 
dnl    You should have received a copy of the GNU Library General Public License
dnl    along with this library; see the file COPYING.LIB.  If not, write to
dnl    the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
dnl    Boston, MA 02111-1307, USA.

# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4) dnl a source file from your sub dir

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

dnl This ksh/zsh feature conflicts with `cd blah ; pwd`
unset CDPATH

dnl Checking host/target/build systems, for make, install etc.
AC_CANONICAL_SYSTEM 
dnl Perform program name transformation
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(atmosphere, 0.1) dnl searches for some needed programs

KDE_SET_PREFIX

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

dnl Checks for programs.
AC_CHECK_COMPILERS
AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)
KDE_PROG_LIBTOOL

dnl for NLS support. Call them in this order!
dnl WITH_NLS is for the po files
AM_KDE_WITH_NLS

KDE_USE_QT(3.2)
AC_PATH_KDE
dnl =======================================================
dnl FILE: configure.in.in
dnl =======================================================

#MIN_CONFIG(3.2)

CXXFLAGS="$CXXFLAGS -fexceptions"
AC_SUBST(CXXFLAGS)

dnl PACKAGE set before
AC_C_BIGENDIAN
AC_CHECK_KDEMAXPATHLEN

dnl ------------------------------------------------------------------------
dnl Check for Flameeyes's TFTP library
dnl ------------------------------------------------------------------------
dnl
  AC_ARG_ENABLE(tftp,
    [  --disable-tftp          Turn off TFTP server support.],
    [], enable_tftp=yes)
  
  if test x"$enable_tftp" = xyes; then
    AC_MSG_CHECKING(for Flameeyes's TFTP library)
    cat > tftptest.$ac_ext <<EOF
#include <tftp/server.h>
#include <qhostaddress.h>

TFTP::Server s(QHostAddress());

int main()
{
}

EOF

    if test x"$TFTP_PREFIX" != "x"; then
       tftp_libprefix="$TFTP_PREFIX/lib"
       TFTP_INCLUDE="-I$TFTP_PREFIX/include"
    fi
    ac_try="$CXX tftptest.$ac_ext $TFTP_INCLUDE $QT_INCLUDES $QT_LDFLAGS -ltftp -lqt"

    if AC_TRY_EVAL(ac_try) then
      AC_MSG_RESULT([found])
      for ltftp in $tftp_libprefix /lib /usr/lib /usr/local/lib; do
        AC_CHECK_FILE(["$ltftp/libtftp.la"],
           [TFTP_LIBS="$ltftp/libtftp.la"]
           AC_DEFINE([HAVE_TFTP],,[Define this if you have TFTP (libtftp) installed]),,)
      done    
    else
       AC_MSG_RESULT([not found, TFTP server support not compiled, file transfer disabled.]);
    fi

    rm tftptest.*
  fi

  AC_SUBST(TFTP_LIBS)
  AC_SUBST(TFTP_INCLUDE)

dnl ------------------------------------------------------------------------
dnl Check for Flameeyes's KSNMP library
dnl ------------------------------------------------------------------------
dnl
    AC_ARG_WITH(libksnmp,
        AC_HELP_STRING([--with-libksnmp=PREFIX],[specify location of libksnmp library.]),
        [ac_cv_libksnmp_prefix=$withval],
        [ac_cv_libksnmp_prefix=/usr]
    )
    
    AC_MSG_CHECKING(for libksnmp)

    if "x$ac_cv_libksnmp_prefix" == "xno"; then
      AC_MSG_FAILURE([user disabled.])
    fi

    for lksnmp in $ac_cv_libksnmp_prefix / /usr /usr/local `kde-config --prefix`; do
      AC_CHECK_FILE(["$lksnmp/lib/libksnmp.la"],
         [KSNMP_LIBS="$lksnmp/lib/libksnmp.la"; KSNMP_LIBPATH="$lksnmp/lib"])
      AC_CHECK_FILE(["$lksnmp/include/libksnmp/session.h"],
         [KSNMP_INCLUDE="-I$lksnmp/include"])
    done
    
    cat > ksnmptest.$ac_ext <<EOF

#include <libksnmp/session1.h>

KSNMP::Session1 sess("localhost", "public");

int main()
{
}

EOF
    
    ac_try="$CXX ksnmptest.$ac_ext -DQT_THREAD_SUPPORT $KSNMP_INCLUDE $QT_INCLUDES $QT_LDFLAGS -L$KSNMP_LIBPATH $LIB_KDECORE -lqt-mt -lksnmp"

    if AC_TRY_EVAL(ac_try) then
      AC_MSG_RESULT([found])
    else
       AC_MSG_FAILURE([not found.])
    fi

    rm ksnmptest.*

  AC_SUBST(KSNMP_LIBS)
  AC_SUBST(KSNMP_INCLUDE)

KDE_CREATE_SUBDIRSLIST
AC_CONFIG_FILES([ Makefile ])
AC_CONFIG_FILES([ doc/Makefile ])
AC_CONFIG_FILES([ doc/en/Makefile ])
AC_CONFIG_FILES([ drivers/Makefile ])
AC_CONFIG_FILES([ icons/Makefile ])
AC_CONFIG_FILES([ po/Makefile ])
AC_CONFIG_FILES([ src/Makefile ])
AC_CONFIG_FILES([ src/atmosd/Makefile ])
AC_CONFIG_FILES([ src/common/Makefile ])
AC_CONFIG_FILES([ src/kcm/Makefile ])
AC_OUTPUT
# Check if KDE_SET_PREFIX was called, and --prefix was passed to configure
if test -n "$kde_libs_prefix" -a -n "$given_prefix"; then
  # And if so, warn when they don't match
  if test "$kde_libs_prefix" != "$given_prefix"; then
    # And if kde doesn't know about the prefix yet
    echo ":"`kde-config --path exe`":" | grep ":$given_prefix/bin/:" 2>&1 >/dev/null
    if test $? -ne 0; then
      echo ""
      echo "Warning: you chose to install this package in $given_prefix,"
      echo "but KDE was found in $kde_libs_prefix."
      echo "For this to work, you will need to tell KDE about the new prefix, by ensuring"
      echo "that KDEDIRS contains it, e.g. export KDEDIRS=$given_prefix:$kde_libs_prefix"
      echo "Then restart KDE."
      echo ""
    fi
  fi
fi

if test "$all_tests" = "bad"; then
  if test ! "$cache_file" = "/dev/null"; then
    echo ""
    echo "Please remove the file $cache_file after changing your setup"
    echo "so that configure will find the changes next time."
    echo ""
  fi
else
  echo ""
  echo "Good - your configure finished. Start make now"
  echo ""
fi
